# trading-mvp

./: .coverage  .dockerignore  .env.example  .gitignore  .nixpacks.toml  CLAUDE.md  DECISION_AGENT_SYSTEM.md  Dockerfile  Dockerfile.coolify  Dockerfile.coolify-cron  Dockerfile.cron  Dockerfile.simple  LICENSE  NEWS_PIPELINE_FIXES.md  README.md  RESUMEN_ARREGLOS_COMPLETOS.md  add_tickers_to_watchlist.py  alpaca_news.py  analyze_nxe.py  analyze_ticker.py  check_db.py  check_news_db.py  db_manager.py  demo_full_system.py  diagnose_quant.py  docker-compose.coolify.yml  ejecutar_mesa_inversiones.py  explorer_agent.py  extraer_entidades_noticias.py  fetch_latest_execution_data.py  gemini_sentiment.py  get_db_data.py  get_last_2_executions.py  latest_execution_data.json  macro_analyst.py  manage_decisions.py  package-lock.json  pyproject.toml  quick_start.sh  replace_script.py  (+22 more)
.claude/: __init__.py
conductor/: institutional-upgrade.md  institutional_improvement_plan.md  product-guidelines.md  product.md  reboot_architecture.md  tech-stack.md  tracks.md
config/: news_criteria.py  ticker_entities.json  watchlist_config.json
coolify/: .env.example  COOLIFY_CONFIG.md  COOLIFY_TROUBLESHOOTING.md  CRON_CONFIG.md  NGINX_CRON_SETUP.md  README.md  SOLUCION_MODULO_ERROR.md  setup_crons.sh  setup_crons_nginx.sh  verify_crons.sh
dashboard/: package-lock.json  package.json  test_asset_dna.mjs
data/: .gitkeep
docs/: CLAUDE.md  DATABASE_MIGRATION_PLAN.md  DATABASE_STATE_ANALYSIS.md  DECISION_AGENT_SYSTEM.md  FASE_2_API_RESPONSES.md  FASE_3_TICKER_NORMALIZATION.md  FASE_4_ALTERNATIVA.md  FASE_4_ANALISIS.md  FASE_5_HARDCODED_VALUES.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_SUPABASE.md  STRUCTURE.md  SUPABASE_DATABASE_CONFIG.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_DEPENDENCIES.md
scripts/: add_ticker_details_column.py  add_ticker_details_column.sql  add_tickers_to_watchlist.py  analyze_ticker.py  check_counts.py  check_supabase_tables.py  cleanup_tables.py  create_asset_dna_table.py  create_asset_dna_table.sql  create_missing_supabase_tables.py  demo_full_system.py  (+29 more)
(+227 files in other folders)
